test/files/neg/t8376/S.scala
object S {
  J.m(0)
  // the error message should show `T*` in the method signatures rather than `<repeated>[T]`
}
